--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -15,7 +15,8 @@
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
-    "git-hook": "npm test -s"
+    "git-hook": "npm test -s",
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
     "apisauce": "0.14.0",
