switch to listview for listing entities

--- a/templates/listview-style.ejs
+++ b/templates/listview-style.ejs
@@ -1,5 +1,5 @@
 import { StyleSheet } from 'react-native'
-import { ApplicationStyles, Metrics, Colors } from '../../../../../DevScreens/DevTheme/'
+import { ApplicationStyles, Metrics, Colors } from '../../Themes'
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
