--- a/boilerplate/App/Services/JhipsterApi.js.ejs
+++ b/boilerplate/App/Services/JhipsterApi.js.ejs
@@ -48,7 +48,7 @@ const create = (baseURL = AppConfig.apiUrl) => {
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.setHeader('Authorization', '')
   <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-  const login = (userAuth) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'oauth/token', userAuth, {headers: {'Authorization': 'Basic ' + new Buffer(AppConfig.oauthClientId + ':' + AppConfig.oauthClientSecret).toString('base64'), 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*'}})
+  const login = (userAuth) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'oauth/token', userAuth, {headers: {'Authorization': 'Basic ' + Buffer.alloc(AppConfig.oauthClientId + ':' + AppConfig.oauthClientSecret).toString('base64'), 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*'}})
   <%_ } else if (props.authType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
   <%_ } _%>
