--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "ava": "0.18.2",
-    "babel-eslint": "7.1.1",
+    "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.18.0",
     "buffer": "5.0.5",
     "enzyme": "2.8.2",
@@ -83,6 +83,9 @@
       "XMLHttpRequest",
       "FormData",
       "React$Element"
+    ],
+    "ignore": [
+      "ignite/**"
     ]
   },
   "config": {
