--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -16,7 +16,27 @@ class <%= props.name %>EntityEditScreen extends React.Component {
     super(props)
     this.state = {
       formModel: t.struct({
-        id: t.Number
+        id: t.Number,
+        <%_ props.entityConfig.fields.forEach(function (field, index) {
+            // todo handle enums, required, constraints
+          if (field.fieldType === 'Integer'
+            || field.fieldType === 'Long'
+            || field.fieldType === 'Float'
+            || field.fieldType === 'Decimal'
+            || field.fieldType === 'Double'
+            || field.fieldType === 'BigDecimal') {
+        _%>
+        <%= field.fieldName %>: t.maybe(t.Number)<% if (index !== props.entityConfig.fields.length -1) { %>,<% } %>
+        <%_ } else if (field.fieldType === 'LocalDate'
+        || field.fieldType === 'Instant'
+        || field.fieldType === 'ZonedDateTime') { _%>
+        <%= field.fieldName %>: t.maybe(t.Date)<% if (index !== props.entityConfig.fields.length -1) { %>,<% } %>
+        <%_ } else if (field.fieldType === 'Boolean') { _%>
+        <%= field.fieldName %>: t.maybe(t.Boolean)<% if (index !== props.entityConfig.fields.length -1) { %>,<% } %>
+        <%_ } else { _%>
+        <%= field.fieldName %>: t.maybe(t.String)<% if (index !== props.entityConfig.fields.length -1) { %>,<% } %>
+        <%_ } _%>
+        <%_ }) _%>
       }),
       formValue: this.props.<%= camelCase(props.name) %>,
       formOptions: {
