--- a/boilerplate/App/Containers/RootContainer.js.ejs
+++ b/boilerplate/App/Containers/RootContainer.js.ejs
@@ -4,7 +4,6 @@ import NavigationRouter from '../Navigation/NavigationRouter'
 import { connect } from 'react-redux'
 import StartupActions from '../Redux/StartupRedux'
 import LoginActions from '../Redux/LoginRedux'
-import AccountActions from '../Redux/AccountRedux'
 import ReduxPersist from '../Config/ReduxPersist'
 
 // Styles
@@ -28,9 +27,6 @@ class RootContainer extends Component {
   }
 
   componentWillReceiveProps (newProps) {
-    if (newProps.rehydrationComplete && !this.props.login) {
-      this.props.loadLogin()
-    }
     <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
     if (newProps.login && newProps.rehydrationComplete) {
       if (newProps.login.hasOwnProperty('refresh_token') && !this.state.authTimeout) {
@@ -76,11 +72,9 @@ const mapStateToProps = (state) => {
 // wraps dispatch to create nicer functions to call within our component
 const mapDispatchToProps = (dispatch) => ({
   startup: () => dispatch(StartupActions.startup()),
-  loadLogin: () => dispatch(LoginActions.loginLoad()),
   <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-  refreshLogin: (refreshToken) => dispatch(LoginActions.loginRefresh(refreshToken)),
+  refreshLogin: (refreshToken) => dispatch(LoginActions.loginRefresh(refreshToken))
   <%_ } _%>
-  getAccount: () => dispatch(AccountActions.accountRequest())
 })
 
 export default connect(mapStateToProps, mapDispatchToProps)(RootContainer)
