--- a/templates/entity-detail-screen.ejs
+++ b/templates/entity-detail-screen.ejs
@@ -32,7 +32,7 @@ class <%= props.name %>EntityDetailScreen extends React.Component {
       <ScrollView style={styles.container}>
         <Text>ID: {this.state.<%= camelCase(props.name) %>.id}</Text>
         <%_ props.entityConfig.fields.forEach(function (field) { _%>
-        <Text><%= field.fieldName %>: {this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>}</Text>
+        <Text><%= upperFirst(field.fieldName) %>: {this.state.<%= camelCase(props.name) %>.<%= field.fieldName %>}</Text>
         <%_ }) _%>
         <RoundedButton text='Edit' onPress={NavigationActions.<%= camelCase(props.name) %>EntityEdit.bind(this, { entityId: this.state.<%= camelCase(props.name) %>.id })} />
       </ScrollView>
