--- a/boilerplate/App/Sagas/index.js.ejs
+++ b/boilerplate/App/Sagas/index.js.ejs
@@ -1,13 +1,11 @@
 import { takeLatest } from 'redux-saga/effects'
 import API from '../Services/Api'
-import JHIPSTER_API from '../Services/JhipsterApi'
 import FixtureAPI from '../Services/FixtureApi'
 import DebugConfig from '../Config/DebugConfig'
 
 /* ------------- Types ------------- */
 
 import { StartupTypes } from '../Redux/StartupRedux'
-import { GithubTypes } from '../Redux/GithubRedux'
 import { LoginTypes } from '../Redux/LoginRedux'
 import { RegisterTypes } from '../Redux/RegisterRedux'
 import { PasswordTypes } from '../Redux/PasswordRedux'
@@ -30,8 +28,6 @@ import { getAccount, updateAccount } from './AccountSagas'
 // The API we use is only used from Sagas, so we create it here and pass along
 // to the sagas which need it.
 const api = DebugConfig.useFixtures ? FixtureAPI : API.create()
-// todo set up fixtures for the JHipster API
-const jhipsterApi = JHIPSTER_API.create()
 
 /* ------------- Connect Types To Sagas ------------- */
 
@@ -42,18 +38,18 @@ export default function * root () {
     takeLatest(OpenScreenTypes.OPEN_SCREEN, openScreen),
 
     // JHipster accounts
-    takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, jhipsterApi),
+    takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, api),
     <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-    takeLatest(LoginTypes.LOGIN_REFRESH, loginRefresh, jhipsterApi),
+    takeLatest(LoginTypes.LOGIN_REFRESH, loginRefresh, api),
     <%_ } _%>
-    takeLatest(LoginTypes.LOGIN_REQUEST, login, jhipsterApi),
-    takeLatest(LoginTypes.LOGOUT_REQUEST, logout, jhipsterApi),
-    takeLatest(RegisterTypes.REGISTER_REQUEST, register, jhipsterApi),
-    takeLatest(PasswordTypes.FORGOT_PASSWORD_REQUEST, forgotPassword, jhipsterApi),
-    takeLatest(PasswordTypes.CHANGE_PASSWORD_REQUEST, changePassword, jhipsterApi),
+    takeLatest(LoginTypes.LOGIN_REQUEST, login, api),
+    takeLatest(LoginTypes.LOGOUT_REQUEST, logout, api),
+    takeLatest(RegisterTypes.REGISTER_REQUEST, register, api),
+    takeLatest(PasswordTypes.FORGOT_PASSWORD_REQUEST, forgotPassword, api),
+    takeLatest(PasswordTypes.CHANGE_PASSWORD_REQUEST, changePassword, api),
 
-    takeLatest(AccountTypes.ACCOUNT_REQUEST, getAccount, jhipsterApi),
-    takeLatest(AccountTypes.ACCOUNT_UPDATE_REQUEST, updateAccount, jhipsterApi),
+    takeLatest(AccountTypes.ACCOUNT_REQUEST, getAccount, api),
+    takeLatest(AccountTypes.ACCOUNT_UPDATE_REQUEST, updateAccount, api),
     // ignite-jhipster-saga-redux-connect-needle
   ]
 }
