--- a/boilerplate/App/Containers/RootContainer.js.ejs
+++ b/boilerplate/App/Containers/RootContainer.js.ejs
@@ -3,7 +3,9 @@ import { View, StatusBar } from 'react-native'
 import NavigationRouter from '../Navigation/NavigationRouter'
 import { connect } from 'react-redux'
 import StartupActions from '../Redux/StartupRedux'
+<%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
 import LoginActions from '../Redux/LoginRedux'
+<%_ } _%>
 import ReduxPersist from '../Config/ReduxPersist'
 
 // Styles
@@ -71,10 +73,10 @@ const mapStateToProps = (state) => {
 
 // wraps dispatch to create nicer functions to call within our component
 const mapDispatchToProps = (dispatch) => ({
-  startup: () => dispatch(StartupActions.startup()),
   <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-  refreshLogin: (refreshToken) => dispatch(LoginActions.loginRefresh(refreshToken))
+  refreshLogin: (refreshToken) => dispatch(LoginActions.loginRefresh(refreshToken)),
   <%_ } _%>
+  startup: () => dispatch(StartupActions.startup())
 })
 
 export default connect(mapStateToProps, mapDispatchToProps)(RootContainer)
