use prop-types package

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -24,6 +24,7 @@
     "apisauce": "0.11.0",
     "format-json": "1.0.3",
     "lodash": "4.17.4",
+    "prop-types": "15.5.10",
     "querystringify": "1.0.0",
     "ramda": "0.23.0",
     "react": "15.4.1",
