--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -1,9 +1,6 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "lint": "standard --verbose | snazzy",
-    "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
-    "fixcode": "standard --fix",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && npm i",
@@ -18,7 +15,7 @@
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
-    "git-hook": "npm run lint -s && npm test -s"
+    "git-hook": "npm test -s"
   },
   "dependencies": {
     "apisauce": "0.11.0",
@@ -42,7 +39,6 @@
   },
   "devDependencies": {
     "ava": "0.18.2",
-    "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.18.0",
     "buffer": "5.0.5",
     "enzyme": "2.8.2",
@@ -56,9 +52,7 @@
     "reactotron-apisauce": "1.12.0",
     "reactotron-react-native": "1.12.0",
     "reactotron-redux": "1.12.0",
-    "reactotron-redux-saga": "1.12.0",
-    "snazzy": "6.0.0",
-    "standard": "8.6.0"
+    "reactotron-redux-saga": "1.12.0"
   },
   "ava": {
     "files": [
@@ -73,25 +67,5 @@
     ],
     "babel": "inherit"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "describe",
-      "it",
-      "fetch",
-      "navigator",
-      "__DEV__",
-      "XMLHttpRequest",
-      "FormData",
-      "React$Element"
-    ],
-    "ignore": [
-      "ignite/**"
-    ]
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "if [ -d 'ignite-base' ]; then cd ignite-base; fi; npm run lint"
-    }
-  }
+  "config": { }
 }
