--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -1,9 +1,9 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
+    "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
-    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && npm i",
+    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
     "test": "ava",
     "test:watch": "ava --watch",
     "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html || xdg-open coverage/index.html",
@@ -18,12 +18,12 @@
     "git-hook": "npm test -s"
   },
   "dependencies": {
-    "apisauce": "0.11.0",
+    "apisauce": "0.14.0",
     "format-json": "1.0.3",
     "lodash": "4.17.4",
     "prop-types": "15.5.10",
     "querystringify": "1.0.0",
-    "ramda": "0.23.0",
+    "ramda": "0.24.1",
     "react": "15.4.1",
     "react-native-config": "0.3.1",
     "react-native-device-info": "0.10.2",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "ava": "0.18.2",
+    "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-es2015": "6.18.0",
     "buffer": "5.0.5",
     "enzyme": "2.8.2",
