--- a/templates/component-style.ejs
+++ b/templates/component-style.ejs
@@ -1,9 +1,7 @@
 import { StyleSheet } from 'react-native'
-import { Metrics } from '../../Themes/'
 
 export default StyleSheet.create({
   container: {
-    flex: 1,
-    paddingTop: Metrics.titlePadding
+    flex: 1
   }
 })
