--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -24,7 +24,7 @@
     "prop-types": "15.5.10",
     "querystringify": "1.0.0",
     "ramda": "0.24.1",
-    "react": "15.4.1",
+    "react": "16.0.0-alpha.12",
     "react-native-config": "0.6.0",
     "react-native-device-info": "0.11.0",
     "react-native-drawer": "2.3.0",
@@ -48,9 +48,9 @@
     "husky": "0.13.1",
     "nyc": "10.1.2",
     "react-addons-test-utils": "15.4.1",
-    "react-dom": "15.4.1",
+    "react-dom": "16.0.0-alpha.12",
     "react-native-mock": "0.3.1",
-    "react-test-renderer": "15.4.1",
+    "react-test-renderer": "16.0.0-alpha.12",
     "reactotron-react-native": "1.12.0",
     "reactotron-redux": "1.12.0",
     "reactotron-redux-saga": "1.12.0"
