--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -4,9 +4,9 @@
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
-    "test": "ava",
-    "test:watch": "ava --watch",
-    "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html || xdg-open coverage/index.html",
+    "test:watch": "jest --watch",
+    "updateSnapshot": "jest --updateSnapshot",
+    "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
     "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
     "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
@@ -38,35 +38,36 @@
     "tcomb-form-native": "0.6.7"
   },
   "devDependencies": {
-    "ava": "0.18.2",
+    "@storybook/addon-storyshots": "^3.2.3",
+    "@storybook/react-native": "^3.2.3",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react-native": "3.0.2",
     "buffer": "5.0.5",
     "enzyme": "2.8.2",
+    "jest": "21.0.2",
     "mockery": "2.0.0",
     "husky": "0.13.1",
-    "nyc": "10.1.2",
     "react-addons-test-utils": "15.4.1",
     "react-dom": "16.0.0-alpha.12",
-    "react-native-mock": "0.3.1",
     "react-test-renderer": "16.0.0-alpha.12",
     "reactotron-react-native": "1.12.0",
     "reactotron-redux": "1.12.0",
     "reactotron-redux-saga": "1.12.0"
   },
-  "ava": {
-    "files": [
-      "Tests/**/*.js",
-      "!Tests/Setup.js"
+  "jest": {
+    "testMatch": [
+      "**/Tests/**/*.js",
+      "**/?(*.)(spec|test).js?(x)"
     ],
-    "require": [
-      "babel-register",
-      "babel-polyfill",
-      "react-native-mock/mock",
+    "testPathIgnorePatterns":[
+      "/node_modules/",
+      "Tests/Setup.js"
+    ],
+    "setupFiles": [
       "./Tests/Setup"
     ],
-    "babel": "inherit"
+    "preset": "react-native"
   },
   "config": { }
 }
