--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -2,6 +2,7 @@
   "createdWith": "<%= props.igniteVersion %>",
   "examples": "classic",
   "jhipsterDirectory": "../",
+  "searchEngine": <%= props.searchEngine %>,
   "askToOverwrite": true,
   "generators": {
     "entity": "ignite-jhipster"
