--- a/templates/redux-test.ejs
+++ b/templates/redux-test.ejs
@@ -20,6 +20,14 @@ test('attempt updating a <%= camelCase(props.name) %>', () => {
   expect(state.updating).toBe(true)
 })
 
+<%_ if (props.searchEngine) { _%>
+test('attempt searching a <%= camelCase(props.name) %>', () => {
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>SearchRequest(1))
+
+  expect(state.searching).toBe(true)
+})
+<%_ } _%>
+
 test('attempt to deleting a <%= camelCase(props.name) %>', () => {
   const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteRequest({id: 1}))
 
@@ -49,6 +57,16 @@ test('success updating a <%= camelCase(props.name) %>', () => {
   expect(state.errorUpdating).toBe(null)
   expect(state.<%= camelCase(props.name) %>).toEqual({id: 1})
 })
+
+<%_ if (props.searchEngine) { _%>
+test('success searching a <%= camelCase(props.name) %>', () => {
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>SearchSuccess({id: 1}))
+
+  expect(state.searching).toBe(false)
+  expect(state.errorSearching).toBe(null)
+  expect(state.<%= camelCase(props.pluralName) %>).toEqual({id: 1})
+})
+<%_ } _%>
 
 test('success deleting a <%= camelCase(props.name) %>', () => {
   const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteSuccess())
@@ -80,6 +98,15 @@ test('success deleting a <%= camelCase(props.name) %>', () => {
 //   expect(state.updating).toBe(false)
 //   expect(state.errorUpdating).toBe(true)
 // })
+
+<%_ if (props.searchEngine) { _%>
+// test('failure searching a <%= camelCase(props.name) %>', () => {
+//   const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>SearchFailure())
+
+//   expect(state.searching).toBe(false)
+//   expect(state.errorSearching).toBe(true)
+// })
+<%_ } _%>
 
 // test('failure deleting a <%= camelCase(props.name) %>', () => {
 //   const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteFailure())
