--- a/templates/redux.ejs
+++ b/templates/redux.ejs
@@ -5,7 +5,7 @@ import Immutable from 'seamless-immutable'
 
 const { Types, Creators } = createActions({
   <%= camelCase(props.name) %>Request: ['<%= camelCase(props.name) %>Id'],
-  <%= camelCase(props.name) %>AllRequest: [],
+  <%= camelCase(props.name) %>AllRequest: ['options'],
   <%= camelCase(props.name) %>UpdateRequest: ['<%= camelCase(props.name) %>'],
   <%_ if (props.searchEngine) { _%>
   <%= camelCase(props.name) %>SearchRequest: ['query'],
