--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -16,7 +16,6 @@ class <%= props.name %>EntityEditScreen extends React.Component {
     super(props)
     this.state = {
       formModel: t.struct({
-        id: t.Number,
         <%_ props.entityConfig.fields.forEach(function (field, index) {
             // todo handle enums, required, constraints, relationships
           if (field.fieldType === 'Integer'
@@ -40,10 +39,11 @@ class <%= props.name %>EntityEditScreen extends React.Component {
       }),
       formValue: this.props.<%= camelCase(props.name) %>,
       formOptions: {
-        id: {
-          returnKeyType: 'done',
-          onSubmitEditing: () => this.submitForm()
-        }
+        // todo make this better
+        // fieldName: {
+        //   returnKeyType: 'done',
+        //   onSubmitEditing: () => this.submitForm()
+        // }
       },
       success: false,
       <%= camelCase(props.name) %>: {}
@@ -54,7 +54,9 @@ class <%= props.name %>EntityEditScreen extends React.Component {
   }
 
   componentWillMount () {
-    this.props.get<%= props.name %>(this.props.entityId)
+    if (this.props.entityId) {
+      this.props.get<%= props.name %>(this.props.entityId)
+    }
   }
 
   componentWillReceiveProps (newProps) {
@@ -77,7 +79,12 @@ class <%= props.name %>EntityEditScreen extends React.Component {
           success: true,
           requesting: false
         })
-        Alert.alert('Success', 'Entity updated successfully', [{text: 'OK'}])
+        if (this.props.entityId) {
+          Alert.alert('Success', 'Entity updated successfully', [{text: 'OK'}])
+        } else {
+          Alert.alert('Success', 'Entity created successfully', [{text: 'OK'}])
+        }
+        this.props.getAll<%= props.pluralName %>({page: 0, sort: 'id,asc', size: 20})
         NavigationActions.pop()
       }
     }
@@ -133,6 +140,7 @@ const mapStateToProps = (state) => {
 const mapDispatchToProps = (dispatch) => {
   return {
     get<%= props.name %>: (id) => dispatch(<%= props.name %>Actions.<%= camelCase(props.name) %>Request(id)),
+    getAll<%= props.pluralName %>: (options) => dispatch(<%= props.name %>Actions.<%= camelCase(props.name) %>AllRequest(options)),
     update<%= props.name %>: (<%= camelCase(props.name) %>) => dispatch(<%= props.name %>Actions.<%= camelCase(props.name) %>UpdateRequest(<%= camelCase(props.name) %>))
   }
 }
