--- a/templates/entity-flatlist.ejs
+++ b/templates/entity-flatlist.ejs
@@ -25,6 +25,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     page: 0,
     sort: 'id,asc',
     size: 20,
+    loading: true,
     done: false,
     <%_ if (props.searchEngine) { _%>
     searchTerm: '',
@@ -127,7 +128,8 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
       return
     }
     this.setState({
-      page: this.state.page + 1
+      page: this.state.page + 1,
+      loading: true
     })
     this.fetch<%= props.pluralName %>()
   }
@@ -136,13 +138,20 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     if (newProps.<%= camelCase(props.pluralName) %>) {
       this.setState({
         done: newProps.<%= camelCase(props.pluralName) %>.length < this.state.size,
-        dataObjects: [...this.state.dataObjects, ...newProps.<%= camelCase(props.pluralName) %>]
+        dataObjects: this.state.loading ? [...this.state.dataObjects, ...newProps.<%= camelCase(props.pluralName) %>] : newProps.<%= camelCase(props.pluralName) %>,
+        loading: false
       })
     }
   }
 
   componentWillMount () {
     this.fetch<%= props.pluralName %>()
+    NavigationActions.refresh({
+      rightTitle: 'Create',
+      onRight: () => {
+        NavigationActions.<%= camelCase(props.name) %>EntityEdit({ entityId: null })
+      }
+    })
   }
 
   render () {
