--- a/templates/entity-edit-screen.ejs
+++ b/templates/entity-edit-screen.ejs
@@ -56,6 +56,8 @@ class <%= props.name %>EntityEditScreen extends React.Component {
   componentWillMount () {
     if (this.props.entityId) {
       this.props.get<%= props.name %>(this.props.entityId)
+    } else {
+      this.setState({formValue: null})
     }
   }
 
@@ -77,7 +79,8 @@ class <%= props.name %>EntityEditScreen extends React.Component {
       } else {
         this.setState({
           success: true,
-          requesting: false
+          requesting: false,
+          formValue: {}
         })
         if (this.props.entityId) {
           Alert.alert('Success', 'Entity updated successfully', [{text: 'OK'}])
@@ -120,7 +123,7 @@ class <%= props.name %>EntityEditScreen extends React.Component {
             onChange={this.formChange}
           />
           <TouchableHighlight style={styles.button} onPress={this.submitForm} underlayColor='#99d9f4'>
-            <Text style={styles.buttonText}>Update</Text>
+            <Text style={styles.buttonText}>Save</Text>
           </TouchableHighlight>
         </KeyboardAvoidingView>
       </ScrollView>
