--- a/templates/redux-test.ejs
+++ b/templates/redux-test.ejs
@@ -70,46 +70,50 @@ test('success searching a <%= camelCase(props.name) %>', () => {
 
 test('success deleting a <%= camelCase(props.name) %>', () => {
   const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteSuccess())
+
   expect(state.deleting).toBe(false)
   expect(state.errorDeleting).toBe(null)
   expect(state.<%= camelCase(props.name) %>).toEqual(null)
 })
 
 test('failure retrieving a <%= camelCase(props.name) %>', () => {
-  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>Failure())
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>Failure({error: 'Not found'}))
 
   expect(state.fetchingOne).toBe(false)
-  expect(state.errorOne).toBe(true)
+  expect(state.errorOne).toEqual({error: 'Not found'})
   expect(state.<%= camelCase(props.name) %>).toEqual(null)
 })
 
 test('failure retrieving a list of <%= camelCase(props.name) %>', () => {
-  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>AllFailure())
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>AllFailure({error: 'Not found'}))
 
   expect(state.fetchingAll).toBe(false)
-  expect(state.errorAll).toBe(true)
+  expect(state.errorAll).toEqual({error: 'Not found'})
   expect(state.<%= camelCase(props.pluralName) %>).toEqual(null)
 })
 
 test('failure updating a <%= camelCase(props.name) %>', () => {
-  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>UpdateFailure())
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>UpdateFailure({error: 'Not found'}))
 
   expect(state.updating).toBe(false)
-  expect(state.errorUpdating).toBe(true)
+  expect(state.errorUpdating).toEqual({error: 'Not found'})
+  expect(state.<%= camelCase(props.name) %>).toEqual(INITIAL_STATE.<%= camelCase(props.name) %>)
 })
 
 <%_ if (props.searchEngine) { _%>
 test('failure searching a <%= camelCase(props.name) %>', () => {
-  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>SearchFailure())
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>SearchFailure({error: 'Not found'}))
 
   expect(state.searching).toBe(false)
-  expect(state.errorSearching).toBe(true)
+  expect(state.errorSearching).toEqual({error: 'Not found'})
+  expect(state.<%= camelCase(props.pluralName) %>).toEqual(null)
 })
 <%_ } _%>
 
 test('failure deleting a <%= camelCase(props.name) %>', () => {
-  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteFailure())
+  const state = reducer(INITIAL_STATE, Actions.<%= camelCase(props.name) %>DeleteFailure({error: 'Not found'}))
 
   expect(state.deleting).toBe(false)
-  expect(state.errorDeleting).toBe(true)
+  expect(state.errorDeleting).toEqual({error: 'Not found'})
+  expect(state.<%= camelCase(props.name) %>).toEqual(INITIAL_STATE.<%= camelCase(props.name) %>)
 })
