--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -28,6 +28,7 @@
     "react": "16.0.0-alpha.12",
     "react-native-config": "0.6.0",
     "react-native-drawer": "2.3.0",
+    "react-native-keyboard-aware-scroll-view": "0.3.0",
     "react-native-router-flux": "3.38.0",
     "react-redux": "5.0.4",
     "redux": "3.6.0",
